--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
       "react-helmet": "^6.1.0",
       "react-icons": "^4.7.1",
       "react-redux": "^8.0.5",
-      "react-router-dom": "^6.6.1"
+      "react-router-dom": "^6.6.1",
+      "socket.io-client": "^4.5.4"
    },
    "devDependencies": {
       "@types/react": "^18.0.26",
