--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
       "@lottiefiles/react-lottie-player": "^3.5.0",
       "@reduxjs/toolkit": "^1.9.1",
       "axios": "^1.2.2",
+      "boring-avatars": "^1.7.0",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-helmet": "^6.1.0",
